--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.airbnb.android:lottie:2.5.5'
+    implementation 'com.github.rey5137:material:1.2.5'
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
