--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.5.5'
     implementation 'com.github.rey5137:material:1.2.5'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
 
 }
 apply plugin: 'com.google.gms.google-services'
