--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,9 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.5.5'
     implementation 'com.github.rey5137:material:1.2.5'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
-    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    implementation 'com.gelitenight.waveview:waveview:1.0.0'
+    implementation 'org.adw.library:discrete-seekbar:1.0.1'
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
