--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,10 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.5.5'
     implementation 'com.github.rey5137:material:1.2.5'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
-    implementation 'com.gelitenight.waveview:waveview:1.0.0'
-    implementation 'org.adw.library:discrete-seekbar:1.0.1'
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
