--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.firebase:firebase-messaging:17.1.0'
     implementation 'com.google.firebase:firebase-functions:16.1.0'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.1'
 
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
@@ -55,6 +56,8 @@ dependencies {
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 
 }
