--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    implementation 'com.google.code.gson:gson:2.7'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
