--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,11 @@ dependencies {
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.ms-square:etsyblur:0.2.1'
 
-    implementation 'com.google.code.gson:gson:2.7'
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+    implementation 'com.shuhart.stepview:stepview:1.2.8'
+    implementation 'com.chaos.view:pinview:1.3.2'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.15'
 
 
 }
