--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -24,7 +27,13 @@
         <activity android:name=".SizesActivity" />
         <activity android:name=".CompActivity" />
         <activity android:name=".Cart" />
-        <activity android:name=".OrderStatus"></activity>
+        <activity android:name=".OrderStatus" />
+        <activity android:name=".Login" />
+        <activity android:name=".TopTen" />
+        <activity android:name=".Vitaminas" />
+        <activity android:name=".PhoneAuth" />
+        <activity android:name=".Profile" />
+        <activity android:name=".Authentication"></activity>
     </application>
 
 </manifest>
